Fixed alignment

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -59,7 +59,8 @@ nav ul li a:hover {
     justify-content: center;
     padding: 0px;
 }
-@media screen and(max-width:480px) {
+
+@media (max-width:480px) {
     .container {
         flex-direction: column;
         align-items: center;
@@ -68,6 +69,9 @@ nav ul li a:hover {
     .memberInfo_div {
         width: 80%;
     }
+}
+@media screen and(min-width:481px) {
+    
 }
 
 .member_img {
